--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-spring": "^9.7.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
